# ppv_stream_rust

./: .dockerignore  .env  .env.example  .gitignore  ADMIN_AUTHENTICATION.md  AFFILIATE.md  CREATOR_BLOCK.md  Cargo.toml  DATA_FLOW.md  DEPLOYMENT.md  DISCLAIMER.md  DOCS_STATUS.md  Dockerfile  ERD.md  FEDERATED_IMPLEMENTATION.md  FEDERATED_IMPLEMENTATION_TASKS.md  FEDERATED_INDEX_ONLY_ARCHITECTURE.md  FEDERATED_LEARN.md  FEDERATED_REVENUE_SHARING.md  GLOSSARY.md  Makefile  PAYMENT.md  PAYMENT_PLUGIN_ARCHITECTURE.md  README.md  RUST_CONCEPTS_FOR_BEGINNERS.md  SECURITY.md  SETUP.md  STORAGE_ADMIN_MOCKUP.md  STORAGE_MIGRATION.md  TECHNICAL_DOCUMENTATION.md  VISION.md  WALLET.md  a  config.tom  docker-compose.federation-test.yml  docker-compose.yml  mysignature  updated.md
.github/workflows/: rust-ci.yml
contracts/: .env  .env.example  Dockerfile  guidance_smartcontract_deployment  hardhat.config.js  package.json
contracts/contracts/: X402Splitter.sol
contracts/scripts/: check_balance.js  deploy_x402.js  estimate_gas_cost.js  print_networks.js
docs/: fed-install.md  federation-administration.md  federation-env-vars.md  federation-key-rotation.md  federation-migration-rollback.md  federation-moderation.md  federation-monitoring.md  federation-privacy.md  federation-provider-settlement.md  federation-security-threat-model.md  federation-setup.md  federation-troubleshooting.md
migrations/: 013_tokens.sql  014_x402_invoice.sql  015_users_wallet_chain.sql  016_purchases_fk_video.sql  017_allowlist_idx_username.sql  018_invoice_uid_hash.sql  019_x402_core.sql  020_x402_invoice_hash.sql  021_pay_tokens.sql  022_pay_tokens_rename_erc20.sql  023_x402_underpay_and_quote.sql  024_pay_tokens_compat_view.sql  025_pay_tokens_kind.sql  026_fiat_invoices.sql  027_smtp_settings.sql  028_wallet.sql  029_affiliate.sql  030_payment_settings.sql  031_storage_settings.sql  032_storage_migration_retry_attempts.sql  033_storage_migration_job_items.sql  034_storage_migration_resume_support.sql  035_creator_blocked_users.sql  040_federation_index_only.sql
public/: affiliate.html  browse.html  dashboard.html  index.html  styles.css  theme.js  wallet.html  watch.html
public/admin/: dashboard.html  login.html  payments.html  settings.html  wallet.html
public/auth/: forgot_password.html  login.html  register.html  reset_password.html
sql/: 001_init.sql  002_admins.sql  003_password_resets.sql  004_sessions.sql  005_allowlist.sql  006_indexes.sql  007_perf_and_fk.sql  008_price_cents_bigint.sql  009_users_username_unique.sql  010_videos_hls.sql  011_videos_description.sql  012_user_profile.sql  040_federation_index_only.sql  041_federation_revenue.sql  20260615_create_playback_sessions.sql  20260616_create_chat.sql
src/: a  auth.rs  bootstrap.rs  commission.rs  config.rs  creator_block.rs  db.rs  email.rs  ffmpeg.rs  hls.rs  lib.rs  main.rs  middleware.rs  payment_settings.rs  schema.sql  sessions.rs  storage_settings.rs  token.rs  validators.rs  worker.rs
src/federation/: activities.rs  catalog.rs  collections.rs  delivery.rs  keys.rs  mod.rs  moderation.rs  resolver.rs  revenue.rs  signatures.rs  video_index.rs
src/handlers/: admin.rs  affiliate.rs  auth_admin.rs  auth_user.rs  chat.rs  creator_block.rs  kurs.rs  me.rs  mod.rs  pages.rs  password.rs  pay.rs  payment_plugins.rs  setup.rs  stream.rs  upload.rs  users.rs  video.rs  wallet.rs
src/plugins/: mod.rs
src/plugins/payment/: env.rs  mod.rs  models.rs  registry.rs  traits.rs
src/plugins/payment/providers/: midtrans.rs  mod.rs  paypal.rs  stripe.rs  x402.rs  xendit.rs
src/plugins/storage/: mod.rs  registry.rs  traits.rs
src/plugins/storage/providers/: local.rs  (+2 more)
src/services/: x402_watcher.rs
tests/: federation_integration.sh
tutorial/: index.html
tutorial/mockups/: admin-dashboard.html  admin-payments.html  admin-settings.html  admin-wallet.html  affiliate.html  browse.html  user-dashboard.html  user-wallet.html  watch.html
