[package]
name = "ppv_stream"
version = "0.2.0"
edition = "2021"

[dependencies]
ethabi = "18"
ethereum-types = "0.14"
sha3 = "0.10"
hex = "0.4"
anyhow = "1"        # <— Wajib (dipakai di main.rs, ffmpeg.rs, db.rs, dll)
once_cell = "1"     # <— Wajib (dipakai untuk cache harga)


# ethers v2 — fitur yang valid
ethers = { version = "2.0.14", default-features = false, features = ["rustls", "ws"] }

tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

axum = { version = "0.7", features = ["multipart"] }
tower-cookies = "0.10"
tower-http = { version = "0.5", features = ["fs"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
base64ct = "=1.6.0"
regex = "1"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "net"] }

tracing = "0.1"
tracing-subscriber = "0.3"

sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "time",
  "macros",
  "bigdecimal"
] }
bigdecimal = "0.4"

dotenvy = "0.15"

[features]
x402-watcher = []
default = []
